# ralph-automation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/ralph_automation/: __init__.py  cli.py  config.py  exporter.py  host_update.py  inventory.py  lock.py  publish_bundle.py  publish_check.py  publish_github_execute.py  publish_github_plan.py  publish_github_status.py  publish_tag_smoke.py  release_preflight.py  sanitize.py  sync.py
src/ralph_automation/templates/project/: AGENTS.md  AGENT_RUNTIME.md  CLAUDE.md  CURSOR.md  GEMINI.md
src/ralph_automation/templates/project/agents/: SKILL-STRUCTURE.md  roles.yml
src/ralph_automation/templates/project/scripts/: agent_console.py  agent_context_packet.py  agent_live_session.py  agent_loop.py  agent_observer.py  agent_orchestrator.py  agent_retro.py  agent_seminar.py  agent_terminal.py  agent_worker.py  ambiguity_scan.py  auto_dispatch.py  auto_merge.py  auto_runner.py  backlog_sweep.py  beta_tester_due.py  budget_estimate.py  build_task_index.py  check_agent_docs.py  check_messages.py  check_repo_structure.py  check_skill_structure.py  claude_cli_probe.py  codex_subagent_bridge.py  collab_log.py  compound_metrics.py  cycle_gate.py  doc_health_report.py  doc_steward_due.py  env_check.py  eval_harness.py  fs_watch.py  generate_report_views.py  generate_script_index.py  generate_views.py  install_hooks.py  kedb_search.py  local_schedule_daemon.py  macro_detect.py  model_routing.py  (+66 more)
tests/: test_inventory_sync_sanitize.py
tests/fixtures/host/: ralph.lock.json  ralph.yml
(+36 files in other folders)
