[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-automation"
version = "0.1.0"
description = "Reusable agent automation core for repository workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ralph = "ralph_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ralph_automation = ["templates/project/**/*"]
